--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "diacritics": "^1.3.0",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "immer": "^9.0.15",
     "lodash": "^4.17.21",
