--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.5.0",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3",
+    "socket.io": "^4.5.1",
     "winston": "^3.8.1"
   },
   "devDependencies": {
