--- a/api/package.json
+++ b/api/package.json
@@ -16,20 +16,42 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.5.1",
     "helmet": "^5.1.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.2.0",
     "lodash": "^4.17.21",
     "mercadopago": "^1.5.14",
+    "mime-types": "^2.1.35",
     "moment": "^2.29.4",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
+    "morgan": "^1.10.0",
     "pg": "^8.7.3",
+    "safe-regex": "^2.1.1",
     "sequelize": "^6.21.3",
     "socket.io": "^4.5.1",
-    "winston": "^3.8.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
+    "winston": "^3.8.1",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/chai": "^4.3.1",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mocha": "^9.1.1",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.6.3",
+    "@types/pg": "^8.6.5",
+    "@types/sequelize": "^4.28.14",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "chai": "^4.3.6",
     "mocha": "^10.0.0"
   }
