--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "diacritics": "^1.3.0",
+    "dompurify": "^2.3.10",
     "dotenv": "^16.0.1",
     "events": "^3.3.0",
     "formik": "^2.2.9",
