--- a/client/package.json
+++ b/client/package.json
@@ -66,9 +66,12 @@
     "@sentry/react": "^7.8.0",
     "@sentry/tracing": "^7.8.0",
     "eslint": "^8.20.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.7.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
